--- a/de/content-containers.html
+++ b/de/content-containers.html
@@ -201,7 +201,7 @@
                         </nav>
                       </li>
                     </ul>
-                    <a href="#" class="yamm-close-bottom"><span class="icon icon--top" aria-hidden="true"></span></a>
+                    <button class="yamm-close-bottom" aria-label="Schliessen"><span class="icon icon--top" aria-hidden="true"></span></button>
                   </nav>
       
                 </div>
@@ -236,7 +236,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Schliessen</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Schliessen</button></div>
                 </div>
                 <div class="row">
                   <div class="col-sm-3">
@@ -298,7 +298,7 @@
                   </div>
                   <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Schliessen"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -308,7 +308,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Schliessen</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Schliessen</button></div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3">
@@ -467,7 +467,7 @@
                     </div>
                       <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Schliessen"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -476,7 +476,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Schliessen</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Schliessen</button></div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3">
@@ -566,7 +566,7 @@
                     </div>
                       <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Schliessen"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -575,7 +575,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Schliessen</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Schliessen</button></div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3">
@@ -733,7 +733,7 @@
                     </div>
                       <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Schliessen"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -743,7 +743,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Schliessen</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Schliessen</button></div>
                 </div>
                 <div class="row">
                   <div class="col-sm-3">
@@ -812,7 +812,7 @@
                     </div>
                   </div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Schliessen"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -1172,7 +1172,7 @@
   <div class="component-example">
     <div class="clearfix">
       <div class="collapse-box" id="accordion1">
-	<a data-toggle="collapse" class="collapsed" href="#collapseOne" data-parent="#accordion1" tabindex="0">Collapsible Group Item #1</a>
+	<a data-toggle="collapse" class="collapsed" href="#collapseOne">Collapsible Group Item #1</a>
 	<div id="collapseOne" class="collapse">
 		<ul class="list-unstyled">
 			<li><a href="#" class="icon icon--before icon--cart">link with icon</a></li>
@@ -1180,13 +1180,13 @@
 			<li><a href="#" class="icon icon--before icon--cart">link with icon</a></li>
 		</ul>
 	</div>
-	<a data-toggle="collapse" class="collapsed" href="#collapseTwo" data-parent="#accordion1">Collapsible Group Item #2</a>
+	<a data-toggle="collapse" class="collapsed" href="#collapseTwo">Collapsible Group Item #2</a>
 	<div id="collapseTwo" class="collapse">
 		<p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
 			bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table,
 			raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.</p>
 	</div>
-	<a data-toggle="collapse" class="collapsed" href="#collapseThree" data-parent="#accordion1">Collapsible Group Item #3</a>
+	<a data-toggle="collapse" class="collapsed" href="#collapseThree">Collapsible Group Item #3</a>
 	<div id="collapseThree" class="collapse">
 		<p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
 			bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table,
@@ -1197,7 +1197,7 @@
 <br>
 
 <div id="accordion2">
-	<a data-toggle="collapse" class="collapsed" href="#collapseOneBis" data-parent="#accordion2">Collapsible Group Item #1</a>
+	<a data-toggle="collapse" class="collapsed" href="#collapseOneBis">Collapsible Group Item #1</a>
 	<div id="collapseOneBis" class="collapse">
 		<ul class="list-unstyled">
 			<li><a href="#" class="icon icon--before icon--cart">link with icon</a></li>
@@ -1205,13 +1205,13 @@
 			<li><a href="#" class="icon icon--before icon--cart">link with icon</a></li>
 		</ul>
 	</div>
-	<a data-toggle="collapse" class="collapsed" href="#collapseTwoBis" data-parent="#accordion2">Collapsible Group Item #2</a>
+	<a data-toggle="collapse" class="collapsed" href="#collapseTwoBis">Collapsible Group Item #2</a>
 	<div id="collapseTwoBis" class="collapse">
 		<p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
 			bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table,
 			raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.</p>
 	</div>
-	<a data-toggle="collapse" class="collapsed" href="#collapseThreeBis" data-parent="#accordion2">Collapsible Group Item #3</a>
+	<a data-toggle="collapse" class="collapsed" href="#collapseThreeBis">Collapsible Group Item #3</a>
 	<div id="collapseThreeBis" class="collapse">
 		<p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
 			bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table,
@@ -1224,7 +1224,7 @@
 
   <div class="code-block collapse" aria-expanded="false" id="code-02-content-containers-03-collapsible-panel" role="note">
     <pre><code class="language-markup">&lt;div class&#x3D;&quot;collapse-box&quot; id&#x3D;&quot;accordion1&quot;&gt;
-	&lt;a data-toggle&#x3D;&quot;collapse&quot; class&#x3D;&quot;collapsed&quot; href&#x3D;&quot;#collapseOne&quot; data-parent&#x3D;&quot;#accordion1&quot; tabindex&#x3D;&quot;0&quot;&gt;Collapsible Group Item #1&lt;/a&gt;
+	&lt;a data-toggle&#x3D;&quot;collapse&quot; class&#x3D;&quot;collapsed&quot; href&#x3D;&quot;#collapseOne&quot;&gt;Collapsible Group Item #1&lt;/a&gt;
 	&lt;div id&#x3D;&quot;collapseOne&quot; class&#x3D;&quot;collapse&quot;&gt;
 		&lt;ul class&#x3D;&quot;list-unstyled&quot;&gt;
 			&lt;li&gt;&lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;icon icon--before icon--cart&quot;&gt;link with icon&lt;/a&gt;&lt;/li&gt;
@@ -1232,13 +1232,13 @@
 			&lt;li&gt;&lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;icon icon--before icon--cart&quot;&gt;link with icon&lt;/a&gt;&lt;/li&gt;
 		&lt;/ul&gt;
 	&lt;/div&gt;
-	&lt;a data-toggle&#x3D;&quot;collapse&quot; class&#x3D;&quot;collapsed&quot; href&#x3D;&quot;#collapseTwo&quot; data-parent&#x3D;&quot;#accordion1&quot;&gt;Collapsible Group Item #2&lt;/a&gt;
+	&lt;a data-toggle&#x3D;&quot;collapse&quot; class&#x3D;&quot;collapsed&quot; href&#x3D;&quot;#collapseTwo&quot;&gt;Collapsible Group Item #2&lt;/a&gt;
 	&lt;div id&#x3D;&quot;collapseTwo&quot; class&#x3D;&quot;collapse&quot;&gt;
 		&lt;p&gt;Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
 			bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table,
 			raw denim aesthetic synth nesciunt you probably haven&#x27;t heard of them accusamus labore sustainable VHS.&lt;/p&gt;
 	&lt;/div&gt;
-	&lt;a data-toggle&#x3D;&quot;collapse&quot; class&#x3D;&quot;collapsed&quot; href&#x3D;&quot;#collapseThree&quot; data-parent&#x3D;&quot;#accordion1&quot;&gt;Collapsible Group Item #3&lt;/a&gt;
+	&lt;a data-toggle&#x3D;&quot;collapse&quot; class&#x3D;&quot;collapsed&quot; href&#x3D;&quot;#collapseThree&quot;&gt;Collapsible Group Item #3&lt;/a&gt;
 	&lt;div id&#x3D;&quot;collapseThree&quot; class&#x3D;&quot;collapse&quot;&gt;
 		&lt;p&gt;Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
 			bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table,
@@ -1249,7 +1249,7 @@
 &lt;br&gt;
 
 &lt;div id&#x3D;&quot;accordion2&quot;&gt;
-	&lt;a data-toggle&#x3D;&quot;collapse&quot; class&#x3D;&quot;collapsed&quot; href&#x3D;&quot;#collapseOneBis&quot; data-parent&#x3D;&quot;#accordion2&quot;&gt;Collapsible Group Item #1&lt;/a&gt;
+	&lt;a data-toggle&#x3D;&quot;collapse&quot; class&#x3D;&quot;collapsed&quot; href&#x3D;&quot;#collapseOneBis&quot;&gt;Collapsible Group Item #1&lt;/a&gt;
 	&lt;div id&#x3D;&quot;collapseOneBis&quot; class&#x3D;&quot;collapse&quot;&gt;
 		&lt;ul class&#x3D;&quot;list-unstyled&quot;&gt;
 			&lt;li&gt;&lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;icon icon--before icon--cart&quot;&gt;link with icon&lt;/a&gt;&lt;/li&gt;
@@ -1257,13 +1257,13 @@
 			&lt;li&gt;&lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;icon icon--before icon--cart&quot;&gt;link with icon&lt;/a&gt;&lt;/li&gt;
 		&lt;/ul&gt;
 	&lt;/div&gt;
-	&lt;a data-toggle&#x3D;&quot;collapse&quot; class&#x3D;&quot;collapsed&quot; href&#x3D;&quot;#collapseTwoBis&quot; data-parent&#x3D;&quot;#accordion2&quot;&gt;Collapsible Group Item #2&lt;/a&gt;
+	&lt;a data-toggle&#x3D;&quot;collapse&quot; class&#x3D;&quot;collapsed&quot; href&#x3D;&quot;#collapseTwoBis&quot;&gt;Collapsible Group Item #2&lt;/a&gt;
 	&lt;div id&#x3D;&quot;collapseTwoBis&quot; class&#x3D;&quot;collapse&quot;&gt;
 		&lt;p&gt;Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
 			bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table,
 			raw denim aesthetic synth nesciunt you probably haven&#x27;t heard of them accusamus labore sustainable VHS.&lt;/p&gt;
 	&lt;/div&gt;
-	&lt;a data-toggle&#x3D;&quot;collapse&quot; class&#x3D;&quot;collapsed&quot; href&#x3D;&quot;#collapseThreeBis&quot; data-parent&#x3D;&quot;#accordion2&quot;&gt;Collapsible Group Item #3&lt;/a&gt;
+	&lt;a data-toggle&#x3D;&quot;collapse&quot; class&#x3D;&quot;collapsed&quot; href&#x3D;&quot;#collapseThreeBis&quot;&gt;Collapsible Group Item #3&lt;/a&gt;
 	&lt;div id&#x3D;&quot;collapseThreeBis&quot; class&#x3D;&quot;collapse&quot;&gt;
 		&lt;p&gt;Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
 			bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table,
