--- a/de/footer.html
+++ b/de/footer.html
@@ -201,7 +201,7 @@
                         </nav>
                       </li>
                     </ul>
-                    <a href="#" class="yamm-close-bottom"><span class="icon icon--top" aria-hidden="true"></span></a>
+                    <button class="yamm-close-bottom" aria-label="Schliessen"><span class="icon icon--top" aria-hidden="true"></span></button>
                   </nav>
       
                 </div>
@@ -236,7 +236,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Schliessen</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Schliessen</button></div>
                 </div>
                 <div class="row">
                   <div class="col-sm-3">
@@ -298,7 +298,7 @@
                   </div>
                   <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Schliessen"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -308,7 +308,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Schliessen</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Schliessen</button></div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3">
@@ -467,7 +467,7 @@
                     </div>
                       <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Schliessen"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -476,7 +476,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Schliessen</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Schliessen</button></div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3">
@@ -566,7 +566,7 @@
                     </div>
                       <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Schliessen"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -575,7 +575,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Schliessen</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Schliessen</button></div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3">
@@ -733,7 +733,7 @@
                     </div>
                       <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Schliessen"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -743,7 +743,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Schliessen</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Schliessen</button></div>
                 </div>
                 <div class="row">
                   <div class="col-sm-3">
@@ -812,7 +812,7 @@
                     </div>
                   </div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Schliessen"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -1181,7 +1181,11 @@
     </ul>
   </div>  <div class="component-release-notes collapse" id="release-notes-04-footer-02-social-media" aria-expanded="false">
     <div class="alert alert-info">
-      <p><strong>2.1.0:</strong></p>
+      <p><strong>3.3.0:</strong></p>
+<ul>
+<li>added a heading for screen readers</li>
+</ul>
+<p><strong>2.1.0:</strong></p>
 <ul>
 <li>added the <code>.links-social</code> class to the <code>&lt;nav/&gt;</code> element containing the social links</li>
 </ul>
@@ -1199,7 +1203,8 @@
 	<div class="container-fluid">
 		<h3>Informiert bleiben</h3>
 		<nav class="links-social">
-			<ul>
+			<h4 id="social_media" class="sr-only">Social media</h4>
+			<ul aria-labelledby="social_media">
 				<li><a class="icon icon--before icon--twitter" href="#">Twitter</a></li>
 				<li><a class="icon icon--before icon--facebook" href="#">Facebook</a></li>
 				<li><a class="icon icon--before icon--rss" href="#">RSS</a></li>
@@ -1228,7 +1233,8 @@
 	&lt;div class&#x3D;&quot;container-fluid&quot;&gt;
 		&lt;h3&gt;Informiert bleiben&lt;/h3&gt;
 		&lt;nav class&#x3D;&quot;links-social&quot;&gt;
-			&lt;ul&gt;
+			&lt;h4 id&#x3D;&quot;social_media&quot; class&#x3D;&quot;sr-only&quot;&gt;Social media&lt;/h4&gt;
+			&lt;ul aria-labelledby&#x3D;&quot;social_media&quot;&gt;
 				&lt;li&gt;&lt;a class&#x3D;&quot;icon icon--before icon--twitter&quot; href&#x3D;&quot;#&quot;&gt;Twitter&lt;/a&gt;&lt;/li&gt;
 				&lt;li&gt;&lt;a class&#x3D;&quot;icon icon--before icon--facebook&quot; href&#x3D;&quot;#&quot;&gt;Facebook&lt;/a&gt;&lt;/li&gt;
 				&lt;li&gt;&lt;a class&#x3D;&quot;icon icon--before icon--rss&quot; href&#x3D;&quot;#&quot;&gt;RSS&lt;/a&gt;&lt;/li&gt;
