--- a/de/tables.html
+++ b/de/tables.html
@@ -201,7 +201,7 @@
                         </nav>
                       </li>
                     </ul>
-                    <a href="#" class="yamm-close-bottom"><span class="icon icon--top" aria-hidden="true"></span></a>
+                    <button class="yamm-close-bottom" aria-label="Schliessen"><span class="icon icon--top" aria-hidden="true"></span></button>
                   </nav>
       
                 </div>
@@ -236,7 +236,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Schliessen</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Schliessen</button></div>
                 </div>
                 <div class="row">
                   <div class="col-sm-3">
@@ -298,7 +298,7 @@
                   </div>
                   <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Schliessen"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -308,7 +308,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Schliessen</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Schliessen</button></div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3">
@@ -467,7 +467,7 @@
                     </div>
                       <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Schliessen"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -476,7 +476,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Schliessen</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Schliessen</button></div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3">
@@ -566,7 +566,7 @@
                     </div>
                       <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Schliessen"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -575,7 +575,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Schliessen</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Schliessen</button></div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3">
@@ -733,7 +733,7 @@
                     </div>
                       <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Schliessen"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -743,7 +743,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Schliessen</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Schliessen</button></div>
                 </div>
                 <div class="row">
                   <div class="col-sm-3">
@@ -812,7 +812,7 @@
                     </div>
                   </div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Schliessen"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -839,10 +839,18 @@
     </ul>
   </div>  <div class="component-release-notes collapse" id="release-notes-03-tables-01-table-standard" aria-expanded="false">
     <div class="alert alert-info">
-      <p><strong>3.0.0</strong></p>
+      <p><strong>3.3.0</strong></p>
 <ul>
-<li>remove attribute <code>role=&quot;columnheader&quot;</code> on tag <code>&lt;tr&gt;</code></li>
-<li>remove attribute <code>role=&quot;rowheader&quot;</code> on tag <code>&lt;th&gt;</code></li>
+<li>
+<p>use <code>coal</code> instead of <code>#999</code> for <code>caption</code>s text color
+<strong>3.0.0</strong></p>
+</li>
+<li>
+<p>remove attribute <code>role=&quot;columnheader&quot;</code> on tag <code>&lt;tr&gt;</code></p>
+</li>
+<li>
+<p>remove attribute <code>role=&quot;rowheader&quot;</code> on tag <code>&lt;th&gt;</code></p>
+</li>
 </ul>
 <p><strong>2.1.9</strong></p>
 <ul>
