--- a/de/typography.html
+++ b/de/typography.html
@@ -201,7 +201,7 @@
                         </nav>
                       </li>
                     </ul>
-                    <a href="#" class="yamm-close-bottom"><span class="icon icon--top" aria-hidden="true"></span></a>
+                    <button class="yamm-close-bottom" aria-label="Schliessen"><span class="icon icon--top" aria-hidden="true"></span></button>
                   </nav>
       
                 </div>
@@ -236,7 +236,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Schliessen</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Schliessen</button></div>
                 </div>
                 <div class="row">
                   <div class="col-sm-3">
@@ -298,7 +298,7 @@
                   </div>
                   <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Schliessen"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -308,7 +308,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Schliessen</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Schliessen</button></div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3">
@@ -467,7 +467,7 @@
                     </div>
                       <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Schliessen"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -476,7 +476,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Schliessen</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Schliessen</button></div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3">
@@ -566,7 +566,7 @@
                     </div>
                       <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Schliessen"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -575,7 +575,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Schliessen</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Schliessen</button></div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3">
@@ -733,7 +733,7 @@
                     </div>
                       <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Schliessen"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -743,7 +743,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Schliessen</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Schliessen</button></div>
                 </div>
                 <div class="row">
                   <div class="col-sm-3">
@@ -812,7 +812,7 @@
                     </div>
                   </div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Schliessen"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -1374,7 +1374,7 @@ Bei einem Link im Textfluss wird der verlinkte Text unterstrichen. Links in eine
     <div class="clearfix">
       <p>An <a href="#">internal link</a> in a paragraph.</p>
 
-<p>An <a href="#" class="icon icon--after icon--external">external link</a> in a paragraph.</p>
+<p>An <a href="#" class="icon icon--after icon--external" title="External link">external link</a> in a paragraph.</p>
 <a href="#" class="icon icon--before icon--cart">link with icon</a><br>
 <a href="#" class="icon icon--before icon--pdf">link with icon lorem <span class="text-dimmed">(PDF, 43 pages, 2Mb, English)</span></a><br>
     </div>
@@ -1384,7 +1384,7 @@ Bei einem Link im Textfluss wird der verlinkte Text unterstrichen. Links in eine
   <div class="code-block collapse" aria-expanded="false" id="code-04-typography-08-links" role="note">
     <pre><code class="language-markup">&lt;p&gt;An &lt;a href&#x3D;&quot;#&quot;&gt;internal link&lt;/a&gt; in a paragraph.&lt;/p&gt;
 
-&lt;p&gt;An &lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;icon icon--after icon--external&quot;&gt;external link&lt;/a&gt; in a paragraph.&lt;/p&gt;
+&lt;p&gt;An &lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;icon icon--after icon--external&quot; title&#x3D;&quot;External link&quot;&gt;external link&lt;/a&gt; in a paragraph.&lt;/p&gt;
 &lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;icon icon--before icon--cart&quot;&gt;link with icon&lt;/a&gt;&lt;br&gt;
 &lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;icon icon--before icon--pdf&quot;&gt;link with icon lorem &lt;span class&#x3D;&quot;text-dimmed&quot;&gt;(PDF, 43 pages, 2Mb, English)&lt;/span&gt;&lt;/a&gt;&lt;br&gt;</code></pre>
   </div>
