--- a/en/functions.html
+++ b/en/functions.html
@@ -201,7 +201,7 @@
                         </nav>
                       </li>
                     </ul>
-                    <a href="#" class="yamm-close-bottom"><span class="icon icon--top" aria-hidden="true"></span></a>
+                    <button class="yamm-close-bottom" aria-label="Close"><span class="icon icon--top" aria-hidden="true"></span></button>
                   </nav>
       
                 </div>
@@ -236,7 +236,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Close</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Close</button></div>
                 </div>
                 <div class="row">
                   <div class="col-sm-3">
@@ -298,7 +298,7 @@
                   </div>
                   <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Close"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -308,7 +308,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Close</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Close</button></div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3">
@@ -467,7 +467,7 @@
                     </div>
                       <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Close"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -476,7 +476,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Close</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Close</button></div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3">
@@ -566,7 +566,7 @@
                     </div>
                       <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Close"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -575,7 +575,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Close</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Close</button></div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3">
@@ -733,7 +733,7 @@
                     </div>
                       <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Close"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -743,7 +743,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Close</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Close</button></div>
                 </div>
                 <div class="row">
                   <div class="col-sm-3">
@@ -812,7 +812,7 @@
                     </div>
                   </div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Close"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -900,13 +900,17 @@
     </ul>
   </div>  <div class="component-release-notes collapse" id="release-notes-04-functions-02-social-sharing" aria-expanded="false">
     <div class="alert alert-info">
-      <p><strong>2.1.1:</strong></p>
+      <p><strong>3.3.0:</strong></p>
 <ul>
-<li>added the <code>.social-sharing</code> class to the <code>#social-sharing</code> element</li>
+<li>added a heading for screen readers</li>
 </ul>
 <p><strong>3.1.1:</strong></p>
 <ul>
 <li>added <code>xing</code> and <code>linkedin</code> icons for social sharing</li>
+</ul>
+<p><strong>2.1.1:</strong></p>
+<ul>
+<li>added the <code>.social-sharing</code> class to the <code>#social-sharing</code> element</li>
 </ul>
 
     </div>
@@ -919,6 +923,7 @@
   <div class="component-example">
     <div class="clearfix">
       <div class="social-sharing">
+	<h3 class="sr-only">Social media sharing</h3>
 	<a href="#" aria-label="Facebook" class="social-sharing-facebook"></a>
 	<a href="#" aria-label="Twitter" class="social-sharing-twitter"></a>
 	<a href="#" aria-label="Google+" class="social-sharing-google"></a>
@@ -931,6 +936,7 @@
 
   <div class="code-block collapse" aria-expanded="false" id="code-04-functions-02-social-sharing" role="note">
     <pre><code class="language-markup">&lt;div class&#x3D;&quot;social-sharing&quot;&gt;
+	&lt;h3 class&#x3D;&quot;sr-only&quot;&gt;Social media sharing&lt;/h3&gt;
 	&lt;a href&#x3D;&quot;#&quot; aria-label&#x3D;&quot;Facebook&quot; class&#x3D;&quot;social-sharing-facebook&quot;&gt;&lt;/a&gt;
 	&lt;a href&#x3D;&quot;#&quot; aria-label&#x3D;&quot;Twitter&quot; class&#x3D;&quot;social-sharing-twitter&quot;&gt;&lt;/a&gt;
 	&lt;a href&#x3D;&quot;#&quot; aria-label&#x3D;&quot;Google+&quot; class&#x3D;&quot;social-sharing-google&quot;&gt;&lt;/a&gt;
