--- a/fr/hierarchical-navigation.html
+++ b/fr/hierarchical-navigation.html
@@ -201,7 +201,7 @@
                         </nav>
                       </li>
                     </ul>
-                    <a href="#" class="yamm-close-bottom"><span class="icon icon--top" aria-hidden="true"></span></a>
+                    <button class="yamm-close-bottom" aria-label="Fermer"><span class="icon icon--top" aria-hidden="true"></span></button>
                   </nav>
       
                 </div>
@@ -236,7 +236,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Fermer</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Fermer</button></div>
                 </div>
                 <div class="row">
                   <div class="col-sm-3">
@@ -298,7 +298,7 @@
                   </div>
                   <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Fermer"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -308,7 +308,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Fermer</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Fermer</button></div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3">
@@ -467,7 +467,7 @@
                     </div>
                       <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Fermer"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -476,7 +476,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Fermer</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Fermer</button></div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3">
@@ -566,7 +566,7 @@
                     </div>
                       <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Fermer"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -575,7 +575,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Fermer</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Fermer</button></div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3">
@@ -733,7 +733,7 @@
                     </div>
                       <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Fermer"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -743,7 +743,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Fermer</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Fermer</button></div>
                 </div>
                 <div class="row">
                   <div class="col-sm-3">
@@ -812,7 +812,7 @@
                     </div>
                   </div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Fermer"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -1204,7 +1204,7 @@ Il est possible de développer et d’utiliser d’autres types de flyouts. Le D
 
   <div class="component-example">
     <div class="clearfix">
-      <h2 id="br1" class="hidden">Breadcrumbs</h2>
+      <h2 id="br1" class="sr-only">Breadcrumbs</h2>
 <ol class="breadcrumb" role="menu" aria-labelledby="br1">
 	<li><a href="#">Home page EDA</a><span class="icon icon--greater"></span></li>
 	<li><a href="#">Country & Travel Information</a><span class="icon icon--greater"></span></li>
@@ -1212,14 +1212,14 @@ Il est possible de développer et d’utiliser d’autres types de flyouts. Le D
 	<li><a href="#">Democratic Republic of the Congo</a><span class="icon icon--greater"></span></li>
 	<li><a href="#">Some text to create a line break</a><span class="icon icon--greater"></span></li>
 	<li><a href="#">Bilateral Relations</a><span class="icon icon--greater"></span></li>
-	<li class="active" aria-selected="true" role="presentation">Title of the active page</li>
+	<li class="active" role="presentation">Title of the active page</li>
 </ol>
     </div>
     <button type="button" class="show-code" data-toggle="collapse" data-target="#code-01-hierarchical-navigation-02-breadcrumb" aria-expanded="false" title="Show Source Code">&lt;/&gt;</button>
   </div>
 
   <div class="code-block collapse" aria-expanded="false" id="code-01-hierarchical-navigation-02-breadcrumb" role="note">
-    <pre><code class="language-markup">&lt;h2 id&#x3D;&quot;br1&quot; class&#x3D;&quot;hidden&quot;&gt;Breadcrumbs&lt;/h2&gt;
+    <pre><code class="language-markup">&lt;h2 id&#x3D;&quot;br1&quot; class&#x3D;&quot;sr-only&quot;&gt;Breadcrumbs&lt;/h2&gt;
 &lt;ol class&#x3D;&quot;breadcrumb&quot; role&#x3D;&quot;menu&quot; aria-labelledby&#x3D;&quot;br1&quot;&gt;
 	&lt;li&gt;&lt;a href&#x3D;&quot;#&quot;&gt;Home page EDA&lt;/a&gt;&lt;span class&#x3D;&quot;icon icon--greater&quot;&gt;&lt;/span&gt;&lt;/li&gt;
 	&lt;li&gt;&lt;a href&#x3D;&quot;#&quot;&gt;Country &amp; Travel Information&lt;/a&gt;&lt;span class&#x3D;&quot;icon icon--greater&quot;&gt;&lt;/span&gt;&lt;/li&gt;
@@ -1227,7 +1227,7 @@ Il est possible de développer et d’utiliser d’autres types de flyouts. Le D
 	&lt;li&gt;&lt;a href&#x3D;&quot;#&quot;&gt;Democratic Republic of the Congo&lt;/a&gt;&lt;span class&#x3D;&quot;icon icon--greater&quot;&gt;&lt;/span&gt;&lt;/li&gt;
 	&lt;li&gt;&lt;a href&#x3D;&quot;#&quot;&gt;Some text to create a line break&lt;/a&gt;&lt;span class&#x3D;&quot;icon icon--greater&quot;&gt;&lt;/span&gt;&lt;/li&gt;
 	&lt;li&gt;&lt;a href&#x3D;&quot;#&quot;&gt;Bilateral Relations&lt;/a&gt;&lt;span class&#x3D;&quot;icon icon--greater&quot;&gt;&lt;/span&gt;&lt;/li&gt;
-	&lt;li class&#x3D;&quot;active&quot; aria-selected&#x3D;&quot;true&quot; role&#x3D;&quot;presentation&quot;&gt;Title of the active page&lt;/li&gt;
+	&lt;li class&#x3D;&quot;active&quot; role&#x3D;&quot;presentation&quot;&gt;Title of the active page&lt;/li&gt;
 &lt;/ol&gt;</code></pre>
   </div>
 
