--- a/fr/teaser.html
+++ b/fr/teaser.html
@@ -201,7 +201,7 @@
                         </nav>
                       </li>
                     </ul>
-                    <a href="#" class="yamm-close-bottom"><span class="icon icon--top" aria-hidden="true"></span></a>
+                    <button class="yamm-close-bottom" aria-label="Fermer"><span class="icon icon--top" aria-hidden="true"></span></button>
                   </nav>
       
                 </div>
@@ -236,7 +236,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Fermer</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Fermer</button></div>
                 </div>
                 <div class="row">
                   <div class="col-sm-3">
@@ -298,7 +298,7 @@
                   </div>
                   <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Fermer"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -308,7 +308,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Fermer</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Fermer</button></div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3">
@@ -467,7 +467,7 @@
                     </div>
                       <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Fermer"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -476,7 +476,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Fermer</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Fermer</button></div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3">
@@ -566,7 +566,7 @@
                     </div>
                       <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Fermer"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -575,7 +575,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Fermer</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Fermer</button></div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3">
@@ -733,7 +733,7 @@
                     </div>
                       <div class="clearfix"></div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Fermer"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -743,7 +743,7 @@
             <div class="dropdown-menu" role="menu">
               <div class="yamm-content container-fluid">
                 <div class="row">
-                  <div class="col-sm-12"><a href="#" class="yamm-close icon icon--after icon--close pull-right" role="menuitem" tabindex="-1">Fermer</a></div>
+                  <div class="col-sm-12"><button class="yamm-close btn btn-link icon icon--after icon--close pull-right">Fermer</button></div>
                 </div>
                 <div class="row">
                   <div class="col-sm-3">
@@ -812,7 +812,7 @@
                     </div>
                   </div>
                 </div>
-                <a href="#" class="yamm-close-bottom" role="menuitem" tabindex="-1"><span class="icon icon--top"></span></a>
+                <button class="yamm-close-bottom" aria-label="Fermer"><span class="icon icon--top"></span></button>
               </div>
             </div>
           </li>
@@ -839,8 +839,16 @@
     </ul>
   </div>  <div class="component-release-notes collapse" id="release-notes-05-teaser-01-focus" aria-expanded="false">
     <div class="alert alert-info">
-      <p><strong>3.0.0</strong>
+      <p><strong>3.3.0</strong></p>
+<ul>
+<li>Amélioration de l’accessibilité en déplaçant les tabs avant le contenu sans changer la présentation visuelle</li>
+</ul>
+<p><strong>3.0.0</strong>
 – Amélioration de l’accessibilité en mettant le diaporama en pause lorsque l’utilisateur interagit avec le composant et aussi en ajoutant un bouton de lecture/pause.</p>
+<p><strong>3.3.0</strong></p>
+<ul>
+<li>Ajout d'<code>aria-label</code> sur les bouttons de nagivation du carousel de remplacement en mode mobile</li>
+</ul>
 
     </div>
   </div>
@@ -858,6 +866,15 @@
       <div class="row">
 	<div class="col-sm-10 col-sm-offset-1">
 		<div class="focus">
+
+			<!-- focus tabs -->
+			<ul class="nav nav-tabs nav-tabs-focus nav-justified">
+				<li class="active"><a href="#home" data-toggle="tab">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, similique</a></li>
+				<li><a href="#profile" data-toggle="tab">Nam voluptate minima</a></li>
+				<li><a href="#messages" data-toggle="tab">Lorem ipsum dolor sit amet</a></li>
+				<li><a href="#settings" data-toggle="tab">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></li>
+			</ul>
+
 			<div class="tab-content tab-border tab-focus">
 				<button class="tab-focus-control btn btn-sm"><span class="icon icon--pause"></span></button>
 
@@ -905,15 +922,6 @@
 					</div>
 				</div>
 			</div>
-
-			<!-- focus tabs -->
-			<ul class="nav nav-tabs nav-tabs-focus nav-justified">
-				<li class="active"><a href="#home" data-toggle="tab">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, similique</a></li>
-				<li><a href="#profile" data-toggle="tab">Nam voluptate minima</a></li>
-				<li><a href="#messages" data-toggle="tab">Lorem ipsum dolor sit amet</a></li>
-				<li><a href="#settings" data-toggle="tab">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></li>
-			</ul>
-
 		</div>
 	</div>
 </div>
@@ -925,6 +933,15 @@
     <pre><code class="language-markup">&lt;div class&#x3D;&quot;row&quot;&gt;
 	&lt;div class&#x3D;&quot;col-sm-10 col-sm-offset-1&quot;&gt;
 		&lt;div class&#x3D;&quot;focus&quot;&gt;
+
+			&lt;!-- focus tabs --&gt;
+			&lt;ul class&#x3D;&quot;nav nav-tabs nav-tabs-focus nav-justified&quot;&gt;
+				&lt;li class&#x3D;&quot;active&quot;&gt;&lt;a href&#x3D;&quot;#home&quot; data-toggle&#x3D;&quot;tab&quot;&gt;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, similique&lt;/a&gt;&lt;/li&gt;
+				&lt;li&gt;&lt;a href&#x3D;&quot;#profile&quot; data-toggle&#x3D;&quot;tab&quot;&gt;Nam voluptate minima&lt;/a&gt;&lt;/li&gt;
+				&lt;li&gt;&lt;a href&#x3D;&quot;#messages&quot; data-toggle&#x3D;&quot;tab&quot;&gt;Lorem ipsum dolor sit amet&lt;/a&gt;&lt;/li&gt;
+				&lt;li&gt;&lt;a href&#x3D;&quot;#settings&quot; data-toggle&#x3D;&quot;tab&quot;&gt;Lorem ipsum dolor sit amet, consectetur adipisicing elit&lt;/a&gt;&lt;/li&gt;
+			&lt;/ul&gt;
+
 			&lt;div class&#x3D;&quot;tab-content tab-border tab-focus&quot;&gt;
 				&lt;button class&#x3D;&quot;tab-focus-control btn btn-sm&quot;&gt;&lt;span class&#x3D;&quot;icon icon--pause&quot;&gt;&lt;/span&gt;&lt;/button&gt;
 
@@ -972,15 +989,6 @@
 					&lt;/div&gt;
 				&lt;/div&gt;
 			&lt;/div&gt;
-
-			&lt;!-- focus tabs --&gt;
-			&lt;ul class&#x3D;&quot;nav nav-tabs nav-tabs-focus nav-justified&quot;&gt;
-				&lt;li class&#x3D;&quot;active&quot;&gt;&lt;a href&#x3D;&quot;#home&quot; data-toggle&#x3D;&quot;tab&quot;&gt;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, similique&lt;/a&gt;&lt;/li&gt;
-				&lt;li&gt;&lt;a href&#x3D;&quot;#profile&quot; data-toggle&#x3D;&quot;tab&quot;&gt;Nam voluptate minima&lt;/a&gt;&lt;/li&gt;
-				&lt;li&gt;&lt;a href&#x3D;&quot;#messages&quot; data-toggle&#x3D;&quot;tab&quot;&gt;Lorem ipsum dolor sit amet&lt;/a&gt;&lt;/li&gt;
-				&lt;li&gt;&lt;a href&#x3D;&quot;#settings&quot; data-toggle&#x3D;&quot;tab&quot;&gt;Lorem ipsum dolor sit amet, consectetur adipisicing elit&lt;/a&gt;&lt;/li&gt;
-			&lt;/ul&gt;
-
 		&lt;/div&gt;
 	&lt;/div&gt;
 &lt;/div&gt;</code></pre>
@@ -1025,6 +1033,15 @@
       <div class="row">
 	<div class="col-sm-10 col-sm-offset-1">
 		<div class="focus focus-vertical">
+
+			<!-- focus tabs -->
+			<ul class="nav nav-tabs nav-tabs-focus nav-justified">
+				<li class="active"><a href="#vertical-home" data-toggle="tab">Lorem ipsum dolor sit amet</a></li>
+				<li><a href="#vertical-profile" data-toggle="tab">Duis autem vel eum iriure</a></li>
+				<li><a href="#vertical-messages" data-toggle="tab">Ut wisi enim ad minim veniam</a></li>
+				<li><a href="#vertical-settings" data-toggle="tab">Nam liber tempor cum soluta nobis eleifend</a></li>
+			</ul>
+
 			<div class="tab-content tab-focus">
 				<button class="tab-focus-control btn btn-sm"><span class="icon icon--pause"></span></button>
 
@@ -1071,14 +1088,6 @@
 				</div>
 			</div>
 
-			<!-- focus tabs -->
-			<ul class="nav nav-tabs nav-tabs-focus nav-justified">
-				<li class="active"><a href="#vertical-home" data-toggle="tab">Lorem ipsum dolor sit amet</a></li>
-				<li><a href="#vertical-profile" data-toggle="tab">Duis autem vel eum iriure</a></li>
-				<li><a href="#vertical-messages" data-toggle="tab">Ut wisi enim ad minim veniam</a></li>
-				<li><a href="#vertical-settings" data-toggle="tab">Nam liber tempor cum soluta nobis eleifend</a></li>
-			</ul>
-
 		</div>
 	</div>
 </div>
@@ -1090,6 +1099,15 @@
     <pre><code class="language-markup">&lt;div class&#x3D;&quot;row&quot;&gt;
 	&lt;div class&#x3D;&quot;col-sm-10 col-sm-offset-1&quot;&gt;
 		&lt;div class&#x3D;&quot;focus focus-vertical&quot;&gt;
+
+			&lt;!-- focus tabs --&gt;
+			&lt;ul class&#x3D;&quot;nav nav-tabs nav-tabs-focus nav-justified&quot;&gt;
+				&lt;li class&#x3D;&quot;active&quot;&gt;&lt;a href&#x3D;&quot;#vertical-home&quot; data-toggle&#x3D;&quot;tab&quot;&gt;Lorem ipsum dolor sit amet&lt;/a&gt;&lt;/li&gt;
+				&lt;li&gt;&lt;a href&#x3D;&quot;#vertical-profile&quot; data-toggle&#x3D;&quot;tab&quot;&gt;Duis autem vel eum iriure&lt;/a&gt;&lt;/li&gt;
+				&lt;li&gt;&lt;a href&#x3D;&quot;#vertical-messages&quot; data-toggle&#x3D;&quot;tab&quot;&gt;Ut wisi enim ad minim veniam&lt;/a&gt;&lt;/li&gt;
+				&lt;li&gt;&lt;a href&#x3D;&quot;#vertical-settings&quot; data-toggle&#x3D;&quot;tab&quot;&gt;Nam liber tempor cum soluta nobis eleifend&lt;/a&gt;&lt;/li&gt;
+			&lt;/ul&gt;
+
 			&lt;div class&#x3D;&quot;tab-content tab-focus&quot;&gt;
 				&lt;button class&#x3D;&quot;tab-focus-control btn btn-sm&quot;&gt;&lt;span class&#x3D;&quot;icon icon--pause&quot;&gt;&lt;/span&gt;&lt;/button&gt;
 
@@ -1135,14 +1153,6 @@
 					&lt;/div&gt;
 				&lt;/div&gt;
 			&lt;/div&gt;
-
-			&lt;!-- focus tabs --&gt;
-			&lt;ul class&#x3D;&quot;nav nav-tabs nav-tabs-focus nav-justified&quot;&gt;
-				&lt;li class&#x3D;&quot;active&quot;&gt;&lt;a href&#x3D;&quot;#vertical-home&quot; data-toggle&#x3D;&quot;tab&quot;&gt;Lorem ipsum dolor sit amet&lt;/a&gt;&lt;/li&gt;
-				&lt;li&gt;&lt;a href&#x3D;&quot;#vertical-profile&quot; data-toggle&#x3D;&quot;tab&quot;&gt;Duis autem vel eum iriure&lt;/a&gt;&lt;/li&gt;
-				&lt;li&gt;&lt;a href&#x3D;&quot;#vertical-messages&quot; data-toggle&#x3D;&quot;tab&quot;&gt;Ut wisi enim ad minim veniam&lt;/a&gt;&lt;/li&gt;
-				&lt;li&gt;&lt;a href&#x3D;&quot;#vertical-settings&quot; data-toggle&#x3D;&quot;tab&quot;&gt;Nam liber tempor cum soluta nobis eleifend&lt;/a&gt;&lt;/li&gt;
-			&lt;/ul&gt;
 
 		&lt;/div&gt;
 	&lt;/div&gt;
