--- a/de/header.html
+++ b/de/header.html
@@ -76,7 +76,7 @@
             <nav class="nav-service">
               <ul class="download-link">
                 <li>
-                  <a href="https://github.com/swiss/styleguide/releases/latest">Version 3.1.1
+                  <a href="https://github.com/swiss/styleguide/releases/latest">Version 3.2-RC.2
       </a>
                 </li>
               </ul>
@@ -1674,7 +1674,7 @@ Die Unterteilung eines Themen A-Z in Bereiche, die über eine Reiternavigation e
           <nav>
             <ul>
               <li>
-                <a href="https://github.com/swiss/styleguide/releases/latest">Version 3.1.1
+                <a href="https://github.com/swiss/styleguide/releases/latest">Version 3.2-RC.2
       </a>
               </li>
             </ul>
