--- a/de/general.html
+++ b/de/general.html
@@ -76,7 +76,7 @@
             <nav class="nav-service">
               <ul class="download-link">
                 <li>
-                  <a href="https://github.com/swiss/styleguide/releases/latest">Version 3.1.1
+                  <a href="https://github.com/swiss/styleguide/releases/latest">Version 3.2-RC.2
       </a>
                 </li>
               </ul>
@@ -1543,7 +1543,7 @@ Je nach Bedarf ist es auch möglich, <code>&lt;span class=&quot;sr-only&quot;&gt
           <nav>
             <ul>
               <li>
-                <a href="https://github.com/swiss/styleguide/releases/latest">Version 3.1.1
+                <a href="https://github.com/swiss/styleguide/releases/latest">Version 3.2-RC.2
       </a>
               </li>
             </ul>
