--- a/de/typography.html
+++ b/de/typography.html
@@ -76,7 +76,7 @@
             <nav class="nav-service">
               <ul class="download-link">
                 <li>
-                  <a href="https://github.com/swiss/styleguide/releases/latest">Version 3.1.1
+                  <a href="https://github.com/swiss/styleguide/releases/latest">Version 3.2-RC.2
       </a>
                 </li>
               </ul>
@@ -1480,7 +1480,7 @@ Bei einem Link im Textfluss wird der verlinkte Text unterstrichen. Links in eine
           <nav>
             <ul>
               <li>
-                <a href="https://github.com/swiss/styleguide/releases/latest">Version 3.1.1
+                <a href="https://github.com/swiss/styleguide/releases/latest">Version 3.2-RC.2
       </a>
               </li>
             </ul>
