--- a/en/content-containers.html
+++ b/en/content-containers.html
@@ -76,7 +76,7 @@
             <nav class="nav-service">
               <ul class="download-link">
                 <li>
-                  <a href="https://github.com/swiss/styleguide/releases/latest">Styleguide version 3.1.1
+                  <a href="https://github.com/swiss/styleguide/releases/latest">Styleguide Version 3.2-RC.2
       </a>
                 </li>
               </ul>
@@ -1298,7 +1298,7 @@
           <nav>
             <ul>
               <li>
-                <a href="https://github.com/swiss/styleguide/releases/latest">Styleguide version 3.1.1
+                <a href="https://github.com/swiss/styleguide/releases/latest">Styleguide Version 3.2-RC.2
       </a>
               </li>
             </ul>
