--- a/en/form-elements.html
+++ b/en/form-elements.html
@@ -76,7 +76,7 @@
             <nav class="nav-service">
               <ul class="download-link">
                 <li>
-                  <a href="https://github.com/swiss/styleguide/releases/latest">Styleguide version 3.1.1
+                  <a href="https://github.com/swiss/styleguide/releases/latest">Styleguide Version 3.2-RC.2
       </a>
                 </li>
               </ul>
@@ -1717,7 +1717,7 @@ With more than 10 options in the select, a search field is setup at the top of t
           <nav>
             <ul>
               <li>
-                <a href="https://github.com/swiss/styleguide/releases/latest">Styleguide version 3.1.1
+                <a href="https://github.com/swiss/styleguide/releases/latest">Styleguide Version 3.2-RC.2
       </a>
               </li>
             </ul>
