--- a/en/header.html
+++ b/en/header.html
@@ -76,7 +76,7 @@
             <nav class="nav-service">
               <ul class="download-link">
                 <li>
-                  <a href="https://github.com/swiss/styleguide/releases/latest">Styleguide version 3.1.1
+                  <a href="https://github.com/swiss/styleguide/releases/latest">Styleguide Version 3.2-RC.2
       </a>
                 </li>
               </ul>
@@ -1672,7 +1672,7 @@ var searchData &#x3D; [&quot;Aargau&quot;, &quot;Appenzell A. Rh.&quot;, &quot;A
           <nav>
             <ul>
               <li>
-                <a href="https://github.com/swiss/styleguide/releases/latest">Styleguide version 3.1.1
+                <a href="https://github.com/swiss/styleguide/releases/latest">Styleguide Version 3.2-RC.2
       </a>
               </li>
             </ul>
