--- a/en/typography.html
+++ b/en/typography.html
@@ -76,7 +76,7 @@
             <nav class="nav-service">
               <ul class="download-link">
                 <li>
-                  <a href="https://github.com/swiss/styleguide/releases/latest">Styleguide version 3.1.1
+                  <a href="https://github.com/swiss/styleguide/releases/latest">Styleguide Version 3.2-RC.2
       </a>
                 </li>
               </ul>
@@ -1475,7 +1475,7 @@ If there is a link in the running text, the linked text is underlined. Links in 
           <nav>
             <ul>
               <li>
-                <a href="https://github.com/swiss/styleguide/releases/latest">Styleguide version 3.1.1
+                <a href="https://github.com/swiss/styleguide/releases/latest">Styleguide Version 3.2-RC.2
       </a>
               </li>
             </ul>
