--- a/fr/form-elements.html
+++ b/fr/form-elements.html
@@ -76,7 +76,7 @@
             <nav class="nav-service">
               <ul class="download-link">
                 <li>
-                  <a href="https://github.com/swiss/styleguide/releases/latest">Version 3.1.1
+                  <a href="https://github.com/swiss/styleguide/releases/latest">Version 3.2-RC.2
       </a>
                 </li>
               </ul>
@@ -1716,7 +1716,7 @@ S’il existe plus de dix options, un champ de recherche est proposé en début 
           <nav>
             <ul>
               <li>
-                <a href="https://github.com/swiss/styleguide/releases/latest">Version 3.1.1
+                <a href="https://github.com/swiss/styleguide/releases/latest">Version 3.2-RC.2
       </a>
               </li>
             </ul>
