--- a/fr/typography.html
+++ b/fr/typography.html
@@ -76,7 +76,7 @@
             <nav class="nav-service">
               <ul class="download-link">
                 <li>
-                  <a href="https://github.com/swiss/styleguide/releases/latest">Version 3.1.1
+                  <a href="https://github.com/swiss/styleguide/releases/latest">Version 3.2-RC.2
       </a>
                 </li>
               </ul>
@@ -1479,7 +1479,7 @@ dans le cas d’un lien situé dans le corps de texte, le texte muni du lien est
           <nav>
             <ul>
               <li>
-                <a href="https://github.com/swiss/styleguide/releases/latest">Version 3.1.1
+                <a href="https://github.com/swiss/styleguide/releases/latest">Version 3.2-RC.2
       </a>
               </li>
             </ul>
